--- a/learn-and-earn/package.json
+++ b/learn-and-earn/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
     "bcrypt": "^5.0.0",
+    "bootstrap": "^5.0.0-beta2",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.10.10",
