--- a/learn-and-earn/package.json
+++ b/learn-and-earn/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "~10.0.6",
     "@angular/platform-browser-dynamic": "~10.0.6",
     "@angular/router": "~10.0.6",
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "bcrypt": "^5.0.0",
     "bootstrap": "^5.0.0-beta2",
     "express": "^4.17.1",
