--- a/learn-and-earn/package.json
+++ b/learn-and-earn/package.json
@@ -24,6 +24,7 @@
     "@fortawesome/fontawesome-free": "^5.15.2",
     "bcrypt": "^5.0.0",
     "bootstrap": "^5.0.0-beta2",
+    "bootstrap-icons": "^1.4.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
